Package shared properly
This puts META-INF/resources into shared.jar so that i can be used by
.wars

--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -24,10 +24,12 @@
   <build>
     <finalName>shared</finalName>
     <resources>
-      <resource>
-        <directory>src/main/resources/META-INF</directory>
-        <targetPath>WEB-INF/lib</targetPath>
-      </resource>
-    </resources> 
+     <resource>
+      <directory>.</directory>
+      <includes>
+        <include>META-INF/resources/**/*.*</include>
+      </includes>
+     </resource>
+    </resources>
   </build>
 </project>
