--- a/msde/pom.xml
+++ b/msde/pom.xml
@@ -14,12 +14,11 @@
   <name>msde Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+     <dependency>
+       <groupId>com.stackframe</groupId>
+       <artifactId>shared</artifactId>
+       <version>1.0-SNAPSHOT</version>
+     </dependency>
   </dependencies>
   <build>
     <finalName>msde</finalName>
