--- a/aar/pom.xml
+++ b/aar/pom.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.stackframe</groupId>
@@ -10,7 +9,7 @@
   <groupId>com.stackframe</groupId>
   <artifactId>aar</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <packaging>pom</packaging>
   <name>aar Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -23,4 +22,8 @@
   <build>
     <finalName>aar</finalName>
   </build>
+  <modules>
+    <module>aar-playback</module>
+    <module>aar-recording</module>
+  </modules>
 </project>
