--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,27 @@
   <version>1.0-SNAPSHOT</version>
   <name>my-webapp Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
   <build>
-    <finalName>my-webapp</finalName>
+    <plugins>
+    <plugin>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-maven-plugin</artifactId>
+      <version>9.1.0.v20131115</version>
+      <configuration>
+        <scanIntervalSeconds>5</scanIntervalSeconds>
+        <contextHandlers>
+          <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
+            <war>msde/target/msde.war</war>
+            <contextPath>/msde</contextPath>
+          </contextHandler>
+          <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
+            <war>wct/target/wct.war</war>
+            <contextPath>/wct</contextPath>
+          </contextHandler>
+        </contextHandlers>
+      </configuration>
+    </plugin>
+    </plugins>
   </build>
   <modules>
     <module>shared</module>
